lab-jaeger-istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: distributing-tracing-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: distributing-tracing
spec:
  hosts:
    - "*"
  gateways:
    - distributing-tracing-gateway
  http:
    - match:
        - uri:
            prefix: /sayHello
      route:
        - destination:
            host: service-a
            port:
              number: 8080
